@@ -1,3 +1,12 @@
+zmake (1.9-1) bookworm jammy kinetic lunar; urgency=medium
+
+  * Fix image encoding for some devices
+  * BREAKING CHANGE: `swap_red_and_blue` config option isn't actual anymore
+    Now, it's combined with some other options to `encode_mode` option. Please,
+    after installing update configure them with table from README.md
+
+ -- MelianMiko <melianmiko@gmail.com>  Sun, 04 Jun 2023 17:01:07 +0700
+
 zmake (1.8.2-1) bookworm jammy kinetic lunar; urgency=medium
 
   * Some minor fixes
